Scheduler plus some base implementations

--- a/KGame/nbproject/project.properties
+++ b/KGame/nbproject/project.properties
@@ -25,9 +25,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/KGame.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.colt.jar=lib\\colt.jar
+file.reference.concurrent.jar=lib\\concurrent.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.colt.jar}:\
+    ${file.reference.concurrent.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -38,7 +42,6 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
