Added lwjgl dependencies

--- a/KGame/nbproject/project.properties
+++ b/KGame/nbproject/project.properties
@@ -1,9 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=KGame
+application.vendor=karl ctr kirch
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,21 +24,40 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/KGame.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.AppleJavaExtensions.jar=lib\\lwjgl\\AppleJavaExtensions.jar
 file.reference.colt.jar=lib\\colt.jar
 file.reference.concurrent.jar=lib\\concurrent.jar
+file.reference.jinput.jar=lib\\lwjgl\\jinput.jar
+file.reference.lwjgl-debug.jar=lib\\lwjgl\\lwjgl-debug.jar
+file.reference.lwjgl.jar=lib\\lwjgl\\lwjgl.jar
+file.reference.lwjgl_test.jar=lib\\lwjgl\\lwjgl_test.jar
+file.reference.lwjgl_util.jar=lib\\lwjgl\\lwjgl_util.jar
+file.reference.lwjgl_util_applet.jar=lib\\lwjgl\\lwjgl_util_applet.jar
+file.reference.lzma.jar=lib\\lwjgl\\lzma.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.colt.jar}:\
-    ${file.reference.concurrent.jar}
+    ${file.reference.concurrent.jar}:\
+    ${file.reference.AppleJavaExtensions.jar}:\
+    ${file.reference.jinput.jar}:\
+    ${file.reference.lwjgl-debug.jar}:\
+    ${file.reference.lwjgl.jar}:\
+    ${file.reference.lwjgl_test.jar}:\
+    ${file.reference.lwjgl_util.jar}:\
+    ${file.reference.lwjgl_util_applet.jar}:\
+    ${file.reference.lzma.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -56,6 +75,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=defaut
+jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=kgame.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -66,7 +91,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
+run.jvmargs=-Djava.library.path=.\\lib\\native\\windows
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
